# adrianolczak

./: .gitignore  .pylintrc  Dockerfile  Dockerfile.prod  app.sh  compose.prod.yaml  compose.yaml  db.sh  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
adrianolczak/: manage.py
adrianolczak/account/: forms.py  models.py
adrianolczak/account/migrations/: 0001_initial.py  0002_profile_bio_profile_facebook_link_and_more.py  0003_alter_profile_facebook_link_and_more.py
adrianolczak/adrianolczak/: asgi.py  settings.py  urls.py  wsgi.py
adrianolczak/adrianolczak/settings/: base.py  local.py  prod.py
adrianolczak/blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  storage.py  urls.py  views.py
adrianolczak/blog/migrations/: 0001_initial.py  0004_post_photo.py  0006_alter_post_photo.py  0007_postimage.py
adrianolczak/blog/templatetags/: blog_tags.py
adrianolczak/homepage/: context_processors.py  sitemaps.py  urls.py  views.py
adrianolczak/templates/: base.html
adrianolczak/templates/account/: form_base.html
adrianolczak/templates/blog/: base.html
adrianolczak/templates/homepage/: base.html  index.html
aoblog/: manage.py
aoblog/account/: admin.py  forms.py  models.py  urls.py  views.py
aoblog/aoblog/: asgi.py  settings.py  urls.py  wsgi.py
aoblog/blog/: admin.py  forms.py  models.py  urls.py  views.py
aoblog/templates/: base.html
aoblog/templates/blog/: base.html
config/: nginx.conf  uwsgi.ini
config/nginx/: compose.yaml  nginx.conf
config/uwsgi/: uwsgi.ini
scripts/: db.sh  dump_requirements.sh  entrypoint.sh
(+82 files in other folders)
